Repair comparison dialog in editor
The comparison dialog comes up when your version and the version on
disk differ. Somehow it had become invisible, under existing CSS.

--- a/src/css/ise.css
+++ b/src/css/ise.css
@@ -1184,7 +1184,11 @@ a {
 .edSocket {
     display: flex;
     flex-flow: column;
-    height: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .edSocket .edHeader {
@@ -1193,6 +1197,7 @@ a {
 
 .edSocket .edBody {
     flex: 1 1 auto;
+    position: relative;
 }
 /* --------------------------------------------------------- */
 
